// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for an active tab 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c5[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: -1px;
  padding: 0.5rem;
}

.c4.active {
  background-color: white;
  color: #3926a5;
  fill: #3926a5;
}

.c4:focus {
  outline: none;
}

.c4:not(.active):hover {
  background-color: #f2f2f2;
  border-bottom: 1px solid #d9dee2;
}

.c4:not(:last-child) {
  margin-right: 0.5rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #d9dee2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 600;
  list-style: none;
}

.c2 .c3.active {
  box-shadow: inset 0 -2px 0 0 #3926a5;
}

<div
  class="c0 c1"
>
  <ul
    class="c2 c1"
    role="tablist"
    type="default"
  >
    <li
      aria-controls="dogsPanel"
      aria-hidden="false"
      aria-selected="true"
      class="active c3 c4 c5 c1"
      id="dogsTab"
      loop=""
      role="tab"
      step="dogs"
      tabindex="0"
      type="default"
    >
      Dogs
    </li>
    <li
      aria-controls="catsPanel"
      aria-hidden="false"
      aria-selected="false"
      class="c3 c4 c5 c1"
      id="catsTab"
      loop=""
      role="tab"
      step="cats"
      tabindex="-1"
      type="default"
    >
      Cats
    </li>
    <li
      aria-controls="parrotsPanel"
      aria-hidden="false"
      aria-selected="false"
      class="c3 c4 c5 c1"
      id="parrotsTab"
      loop=""
      role="tab"
      step="parrots"
      tabindex="-1"
      type="default"
    >
      Parrots
    </li>
  </ul>
</div>
`;

exports[`renders correctly for basic tabs 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c5[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: -1px;
  padding: 0.5rem;
}

.c4.active {
  background-color: white;
  color: #3926a5;
  fill: #3926a5;
}

.c4:focus {
  outline: none;
}

.c4:not(.active):hover {
  background-color: #f2f2f2;
  border-bottom: 1px solid #d9dee2;
}

.c4:not(:last-child) {
  margin-right: 0.5rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #d9dee2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 600;
  list-style: none;
}

.c2 .c3.active {
  box-shadow: inset 0 -2px 0 0 #3926a5;
}

<div
  class="c0 c1"
>
  <ul
    class="c2 c1"
    role="tablist"
    type="default"
  >
    <li
      aria-controls="dogsPanel"
      aria-hidden="false"
      aria-selected="true"
      class="c3 c4 active c5 c1"
      id="dogsTab"
      loop=""
      role="tab"
      step="dogs"
      tabindex="0"
      type="default"
    >
      Dogs
    </li>
    <li
      aria-controls="catsPanel"
      aria-hidden="false"
      aria-selected="false"
      class="c3 c4 c5 c1"
      id="catsTab"
      loop=""
      role="tab"
      step="cats"
      tabindex="-1"
      type="default"
    >
      Cats
    </li>
    <li
      aria-controls="parrotsPanel"
      aria-hidden="false"
      aria-selected="false"
      class="c3 c4 c5 c1"
      id="parrotsTab"
      loop=""
      role="tab"
      step="parrots"
      tabindex="-1"
      type="default"
    >
      Parrots
    </li>
  </ul>
</div>
`;

exports[`renders correctly for boxed tabs 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c5[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: -1px;
  padding: 0.5rem;
}

.c4.active {
  background-color: white;
  color: #3926a5;
  fill: #3926a5;
}

.c4:focus {
  outline: none;
}

.c4:not(.active):hover {
  background-color: #f2f2f2;
  border-bottom: 1px solid #d9dee2;
}

.c4:not(:last-child) {
  margin-right: 0.5rem;
}

.c6 .c3.active {
  box-shadow: inset 0 -2px 0 0 #3926a5;
}

.c7 .c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 .c3.active {
  box-shadow: inset 0 -2px 0 0 #3926a5;
}

.c8 .c3.active {
  box-shadow: inset 0 -2px 0 0 #3926a5;
}

.c9 .c3.active {
  box-shadow: inset 0 -2px 0 0 #3926a5;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #d9dee2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 600;
  list-style: none;
}

.c2 .c3 {
  border: 1px solid transparent;
}

.c2 .c3.active {
  border: 1px solid #d9dee2;
  border-bottom-color: transparent;
}

<div
  class="c0 c1"
>
  <div>
    <ul
      class="c2 c1"
      role="tablist"
      type="boxed"
    >
      <li
        aria-controls="dogsPanel"
        aria-hidden="false"
        aria-selected="true"
        class="c3 c4 active c5 c1"
        id="dogsTab"
        loop=""
        role="tab"
        step="dogs"
        tabindex="0"
        type="default"
      >
        Dogs
      </li>
      <li
        aria-controls="catsPanel"
        aria-hidden="false"
        aria-selected="false"
        class="c3 c4 c5 c1"
        id="catsTab"
        loop=""
        role="tab"
        step="cats"
        tabindex="-1"
        type="default"
      >
        Cats
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders correctly for center aligned tabs 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c5[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: -1px;
  padding: 0.5rem;
}

.c4.active {
  background-color: white;
  color: #3926a5;
  fill: #3926a5;
}

.c4:focus {
  outline: none;
}

.c4:not(.active):hover {
  background-color: #f2f2f2;
  border-bottom: 1px solid #d9dee2;
}

.c4:not(:last-child) {
  margin-right: 0.5rem;
}

.c6 .c3.active {
  box-shadow: inset 0 -2px 0 0 #3926a5;
}

.c7 .c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 .c3.active {
  box-shadow: inset 0 -2px 0 0 #3926a5;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #d9dee2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 600;
  list-style: none;
}

.c2 .c3.active {
  box-shadow: inset 0 -2px 0 0 #3926a5;
}

.c2 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="c0 c1"
>
  <div>
    <ul
      class="c2 c1"
      role="tablist"
      type="default"
    >
      <li
        aria-controls="dogsPanel"
        aria-hidden="false"
        aria-selected="true"
        class="c3 c4 active c5 c1"
        id="dogsTab"
        loop=""
        role="tab"
        step="dogs"
        tabindex="0"
        type="default"
      >
        Dogs
      </li>
      <li
        aria-controls="catsPanel"
        aria-hidden="false"
        aria-selected="false"
        class="c3 c4 c5 c1"
        id="catsTab"
        loop=""
        role="tab"
        step="cats"
        tabindex="-1"
        type="default"
      >
        Cats
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders correctly for fitted tabs 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c5[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: -1px;
  padding: 0.5rem;
}

.c4.active {
  background-color: white;
  color: #3926a5;
  fill: #3926a5;
}

.c4:focus {
  outline: none;
}

.c4:not(.active):hover {
  background-color: #f2f2f2;
  border-bottom: 1px solid #d9dee2;
}

.c4:not(:last-child) {
  margin-right: 0.5rem;
}

.c6 .c3.active {
  box-shadow: inset 0 -2px 0 0 #3926a5;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #d9dee2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 600;
  list-style: none;
}

.c2 .c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 .c3.active {
  box-shadow: inset 0 -2px 0 0 #3926a5;
}

<div
  class="c0 c1"
>
  <div>
    <ul
      class="c2 c1"
      role="tablist"
      type="default"
    >
      <li
        aria-controls="dogsPanel"
        aria-hidden="false"
        aria-selected="true"
        class="c3 c4 active c5 c1"
        id="dogsTab"
        loop=""
        role="tab"
        step="dogs"
        tabindex="0"
        type="default"
      >
        Dogs
      </li>
      <li
        aria-controls="catsPanel"
        aria-hidden="false"
        aria-selected="false"
        class="c3 c4 c5 c1"
        id="catsTab"
        loop=""
        role="tab"
        step="cats"
        tabindex="-1"
        type="default"
      >
        Cats
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders correctly for right aligned tabs 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c5[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: -1px;
  padding: 0.5rem;
}

.c4.active {
  background-color: white;
  color: #3926a5;
  fill: #3926a5;
}

.c4:focus {
  outline: none;
}

.c4:not(.active):hover {
  background-color: #f2f2f2;
  border-bottom: 1px solid #d9dee2;
}

.c4:not(:last-child) {
  margin-right: 0.5rem;
}

.c6 .c3.active {
  box-shadow: inset 0 -2px 0 0 #3926a5;
}

.c7 .c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 .c3.active {
  box-shadow: inset 0 -2px 0 0 #3926a5;
}

.c8 .c3.active {
  box-shadow: inset 0 -2px 0 0 #3926a5;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #d9dee2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 600;
  list-style: none;
}

.c2 .c3.active {
  box-shadow: inset 0 -2px 0 0 #3926a5;
}

.c2 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
  class="c0 c1"
>
  <div>
    <ul
      class="c2 c1"
      role="tablist"
      type="default"
    >
      <li
        aria-controls="dogsPanel"
        aria-hidden="false"
        aria-selected="true"
        class="c3 c4 active c5 c1"
        id="dogsTab"
        loop=""
        role="tab"
        step="dogs"
        tabindex="0"
        type="default"
      >
        Dogs
      </li>
      <li
        aria-controls="catsPanel"
        aria-hidden="false"
        aria-selected="false"
        class="c3 c4 c5 c1"
        id="catsTab"
        loop=""
        role="tab"
        step="cats"
        tabindex="-1"
        type="default"
      >
        Cats
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders correctly for tabs with content 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  padding: 1.25rem !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c5[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: -1px;
  padding: 0.5rem;
}

.c4.active {
  background-color: white;
  color: #3926a5;
  fill: #3926a5;
}

.c4:focus {
  outline: none;
}

.c4:not(.active):hover {
  background-color: #f2f2f2;
  border-bottom: 1px solid #d9dee2;
}

.c4:not(:last-child) {
  margin-right: 0.5rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #d9dee2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 600;
  list-style: none;
}

.c2 .c3.active {
  box-shadow: inset 0 -2px 0 0 #3926a5;
}

<div
  class="c0 c1"
>
  <div>
    <ul
      class="c2 c1"
      role="tablist"
      type="default"
    >
      <li
        aria-controls="dogsPanel"
        aria-hidden="false"
        aria-selected="true"
        class="c3 c4 active c5 c1"
        id="dogsTab"
        loop=""
        role="tab"
        step="dogs"
        tabindex="0"
        type="default"
      >
        Dogs
      </li>
      <li
        aria-controls="catsPanel"
        aria-hidden="false"
        aria-selected="false"
        class="c3 c4 c5 c1"
        id="catsTab"
        loop=""
        role="tab"
        step="cats"
        tabindex="-1"
        type="default"
      >
        Cats
      </li>
    </ul>
    <div
      aria-hidden="false"
      aria-labelledby="dogsTab"
      class="c5 c6"
      id="dogsPanel"
      loop=""
      role="tabpanel"
    >
      Dogs are awesome
    </div>
  </div>
</div>
`;
